force-app/main/default/objects/Contact/fields/Accreditation_CompactLayout__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_CompactLayout__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Formaula to display accrediation type value in compact layout</description>
    <formula>IF( ISBLANK(Broker_Accreditation_Type__c ),
  NULL, 
  SUBSTITUTE(
    (
      IF(INCLUDES( Broker_Accreditation_Type__c , &quot;Asset Finance&quot;),
        &quot;Asset Finance&quot; + &quot;, &quot;, 
        NULL
      )
      + IF(INCLUDES( Broker_Accreditation_Type__c , &quot;Retail&quot;),
        &quot;Retail&quot; + &quot;, &quot;, 
        NULL
      )
      + IF(INCLUDES( Broker_Accreditation_Type__c , &quot;Commercial&quot;),
        &quot;Commercial&quot; + &quot;, &quot; ,
        NULL
      )
      + &quot;#&quot;
    ),
    &quot;, #&quot;,
    NULL
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accreditation Type</label>
    <type>Text</type>
</CustomField>