force-app/main/default/objects/Contact/fields/Active_From__c.field-meta.xml
<CustomField>
    <fullName>Active_From__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Contact start date.</description>
    <label>Active From Date</label>
    <type>Date</type>
</CustomField>