force-app/main/default/objects/Contact/fields/Active_To__c.field-meta.xml
<CustomField>
    <fullName>Active_To__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Contact end date.</description>
    <label>Active To Date</label>
    <type>Date</type>
</CustomField>