force-app/main/default/objects/Contact/fields/After_Hours_Availability__c.field-meta.xml
<CustomField>
    <fullName>After_Hours_Availability__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information;Source_Salesforce</complianceGroup>
    <description>BDM can add the hours in which a Broker can be contacted</description>
    <label>After Hours Availability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>