force-app/main/default/objects/Contact/fields/Asset_Finance_Accreditation_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Finance_Accreditation_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Accreditation Status of the Broker TPMI-SAO.</description>
    <label>Asset Finance Accreditation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>