force-app/main/default/objects/Contact/fields/AssetFinanceTPMISAO__c.field-meta.xml
<CustomField>
    <fullName>AssetFinanceTPMISAO__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - OCV</complianceGroup>
    <description>TPMI-SAO ID of current Asset Finance accredited Broker.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Finance TPMI-SAO</label>
    <length>19</length>
    <type>Text</type>
</CustomField>