force-app/main/default/objects/Contact/fields/CommercialTPMISAO__c.field-meta.xml
<CustomField>
    <fullName>CommercialTPMISAO__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - OCV</complianceGroup>
    <description>Broker Code of current Commercially accredited Broker.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Commercial Broker Code</label>
    <length>19</length>
    <type>Text</type>
</CustomField>