force-app/main/default/objects/Contact/fields/FinServ__PreferredName__c.field-meta.xml
<CustomField>
    <fullName>FinServ__PreferredName__c</fullName>
    <complianceGroup>Integrity - Trusted</complianceGroup>
    <label>Preferred Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>