force-app/main/default/objects/Contact/fields/Industry_Body_Member__c.field-meta.xml
<CustomField>
    <fullName>Industry_Body_Member__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Industry Body Member</description>
    <label>Industry Body Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MFAA</fullName>
            </value>
            <value>
                <fullName>FBAA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>