force-app/main/default/objects/Contact/fields/Is_Beta_Broker__c.field-meta.xml
<CustomField>
    <fullName>Is_Beta_Broker__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Internal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Field to be used to identify if a broker is a beta broker.</description>
    <label>Is Beta Broker?</label>
    <type>Checkbox</type>
</CustomField>