force-app/main/default/objects/Contact/fields/Is_Broker_User_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Broker_User_Active__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>true</defaultValue>
    <description>This field is used to identify if we need to create active user or not in broker org.</description>
    <label>Is Broker User Active</label>
    <type>Checkbox</type>
</CustomField>