force-app/main/default/objects/Contact/fields/Is_MyBroker__c.field-meta.xml
<CustomField>
    <fullName>Is_MyBroker__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_Salesforce</complianceGroup>
    <description>Evaluated to true when ever the logged user id is equal to Primary RBM/Secondary RBM on associated Broker Set.</description>
    <formula>OR(
  Broker_Set__r.Primary_RBM__c == $User.Id,
  Broker_Set__r.Secondary_RBM__c == $User.Id,
  $UserRole.DeveloperName == &quot;Enablement_Manager&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_MyBroker</label>
    <type>Checkbox</type>
</CustomField>