force-app/main/default/objects/Contact/fields/Is_Preferred_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Preferred_Contact__c</fullName>
    <complianceGroup>Privacy - Personal Information;Source - Salesforce;Integrity - Accurate</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Define Preferred Contact</description>
    <label>Is Preferred Contact</label>
    <type>Checkbox</type>
</CustomField>