force-app/main/default/objects/Contact/fields/Is_Synced_To_Broker_Org__c.field-meta.xml
<CustomField>
    <fullName>Is_Synced_To_Broker_Org__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_Internal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Field to be used to identify if a broker is synced to Broker Org</description>
    <label>Is Synced To Broker Org?</label>
    <type>Checkbox</type>
</CustomField>