force-app/main/default/objects/Contact/fields/Lan_Id__c.field-meta.xml
<CustomField>
    <fullName>Lan_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_OCV</complianceGroup>
    <description>LAN ID of the user who captured the response or who the lead was routed to (if
        available).</description>
    <label>Lan-Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>