force-app/main/default/objects/Contact/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_OCV</complianceGroup>
    <description>This is the entity name associated with Broker&apos;s company&apos;s ABN record</description>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>