force-app/main/default/objects/Contact/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_OCV</complianceGroup>
    <description> Preferred Email address of Manager </description>
    <label>Manager Email</label>
    <type>Email</type>
</CustomField>