force-app/main/default/objects/Contact/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_OCV</complianceGroup>
    <description>Name of the Contact.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>