force-app/main/default/objects/Contact/fields/New_External_Id__c.field-meta.xml
<CustomField>
    <fullName>New_External_Id__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - OCV</complianceGroup>
    <description>This field will store New External ID &amp; OCV ID as unique Identifier.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>New External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>