force-app/main/default/objects/Contact/fields/Notes_Interests__c.field-meta.xml
<CustomField>
    <fullName>Notes_Interests__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_OCV</complianceGroup>
    <description>Notes for BDM to add about the Broker such as personal interests (Broker barracks for Richmond AFL team)</description>
    <label>Notes &amp; Interests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>