force-app/main/default/objects/Contact/fields/OCV_Event_Version__c.field-meta.xml
<CustomField>
    <fullName>OCV_Event_Version__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Contact event version received from OCV</description>
    <label>OCV Event Version</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>