force-app/main/default/objects/Contact/fields/OCV_ID__c.field-meta.xml
<CustomField>
    <fullName>OCV_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>The OCV linked to the Party</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OCV ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>