force-app/main/default/objects/Contact/fields/OCV_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>OCV_Profile_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>To store OCV Profile Id in case of Merge Event</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OCV Profile ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>