force-app/main/default/objects/Contact/fields/Override_OCV_Version__c.field-meta.xml
<CustomField>
    <fullName>Override_OCV_Version__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Field to prevent publishing event and bypass Validation Rule if contact with duplicate sync status is survivor</description>
    <label>Override OCV Version</label>
    <type>Checkbox</type>
</CustomField>