force-app/main/default/objects/Contact/fields/Preferred_Contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information;Source_OCV</complianceGroup>
    <description>Preferred Contact Method to be used to Contact Broker.</description>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>