force-app/main/default/objects/Contact/fields/Previous_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Previous_Record_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Stored previous record type after record type changed from Business to Hidden to hide commercial contacts</description>
    <label>Previous Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>