force-app/main/default/objects/Contact/fields/RetailTPMISAO__c.field-meta.xml
<CustomField>
    <fullName>RetailTPMISAO__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - OCV</complianceGroup>
    <description>TPMI-SAO ID of current Retail accredited Broker.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Retail TPMI-SAO</label>
    <length>19</length>
    <type>Text</type>
</CustomField>