force-app/main/default/objects/Contact/fields/SAO_State__c.field-meta.xml
<CustomField>
    <fullName>SAO_State__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Represents the state to which Broker&apos;s Broker Set is Associated.</description>
    <formula>TEXT(Broker_Set__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAO State</label>
    <type>Text</type>
</CustomField>