force-app/main/default/objects/Contact/fields/Secondary_RBM__c.field-meta.xml
<CustomField>
    <fullName>Secondary_RBM__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Captures the Secondary  RBM Information.</description>
    <formula>HYPERLINK(
  &apos;/&apos; &amp; Broker_Set__r.Secondary_RBM__c,
  TRIM(
    Broker_Set__r.Secondary_RBM__r.FirstName
    &amp; &apos; &apos;
    &amp; Broker_Set__r.Secondary_RBM__r.LastName
  ),
  &apos;_self&apos;
)
&amp; BR()
&amp; Broker_Set__r.Secondary_RBM__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary RBM</label>
    <type>Text</type>
</CustomField>