force-app/main/default/objects/Contact/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - OCV</complianceGroup>
    <description>A name suffix is added at the end of a person&apos;s name to provide additional information about the person.</description>
    <label>Suffix</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
                <label>Companion of the Order of Australia</label>
            </value>
            <value>
                <fullName>AD</fullName>
                <label>Dame of the Order of Australia</label>
            </value>
            <value>
                <fullName>AK</fullName>
                <label>Knight of the Order of Australia</label>
            </value>
            <value>
                <fullName>AM</fullName>
                <label>Member of the Order or Australian</label>
            </value>
            <value>
                <fullName>AO</fullName>
                <label>Officer of the Order of Australia</label>
            </value>
            <value>
                <fullName>BM</fullName>
                <label>British Empire Medal - BEMBravery Medal</label>
            </value>
            <value>
                <fullName>CH</fullName>
                <label>Companion of Honour</label>
            </value>
            <value>
                <fullName>COMDC</fullName>
                <label>Commissioner of Declarations</label>
            </value>
            <value>
                <fullName>CV</fullName>
                <label>Cross of Valour</label>
            </value>
            <value>
                <fullName>DBE</fullName>
                <label>Dame Commander of the Order of the British Empire</label>
            </value>
            <value>
                <fullName>DCB</fullName>
                <label>Dame Commander of the Order of the Bath</label>
            </value>
            <value>
                <fullName>DCMG</fullName>
                <label>Dame Commander of the Order of Saint Michael and Saint George</label>
            </value>
            <value>
                <fullName>DCVO</fullName>
                <label>Dame Commander of the Royal Victorian Order</label>
            </value>
            <value>
                <fullName>DFM</fullName>
                <label>Distinguished Flying Medal</label>
            </value>
            <value>
                <fullName>DSC</fullName>
                <label>Distinguished Service Cross</label>
            </value>
            <value>
                <fullName>DSM</fullName>
                <label>Distinguished Service Medal</label>
            </value>
            <value>
                <fullName>ESQ</fullName>
                <label>Esquire</label>
            </value>
            <value>
                <fullName>GC</fullName>
                <label>George Cross</label>
            </value>
            <value>
                <fullName>II</fullName>
                <label>Second</label>
            </value>
            <value>
                <fullName>III</fullName>
                <label>Third</label>
            </value>
            <value>
                <fullName>IV</fullName>
                <label>Fourth</label>
            </value>
            <value>
                <fullName>JNR</fullName>
                <label>Junior</label>
            </value>
            <value>
                <fullName>KB</fullName>
                <label>Knight Bachelor</label>
            </value>
            <value>
                <fullName>KBE</fullName>
                <label>Knight Commander of the Order of the British Empire</label>
            </value>
            <value>
                <fullName>KCB</fullName>
                <label>Knight Commander of the Order of the Bath</label>
            </value>
            <value>
                <fullName>KCMG</fullName>
                <label>Knight Commander of the Order of Saint Michael and Saint George</label>
            </value>
            <value>
                <fullName>KCVO</fullName>
                <label>Knight Commander of the Royal Victorian Order</label>
            </value>
            <value>
                <fullName>KG</fullName>
                <label>Knight of the Garter</label>
            </value>
            <value>
                <fullName>KT</fullName>
                <label>Knight of the Thistle</label>
            </value>
            <value>
                <fullName>MBE</fullName>
                <label>Member of the Order of the British Empire</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>