force-app/main/default/objects/Contact/fields/Survivor_Party_Id__c.field-meta.xml
<CustomField>
    <fullName>Survivor_Party_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>To store Survivor OCV Id in case of Merge Event</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Survivor Party Id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>