force-app/main/default/objects/Contact/fields/Victim_Party_Id__c.field-meta.xml
<CustomField>
    <fullName>Victim_Party_Id__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>To store Victim Source System Id in case of Merge Event</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Victim Party Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>